# yashima-engine

./: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  CONTRIBUTING.md  CppProperties.json  LICENSE  README.md  conanfile.txt
.github/ISSUE_TEMPLATE/: PULL_REQUEST_TEMPLATE.md  bug_report.md  feature_request.md
docs/architecture/: adr.md  architecture.md
docs/decisions/: 0001-initial-structure.md  0002-define-dev-workflow.md  0003-compiler-selection.md
docs/design/: technical-design.md  vision-and-scope.md
docs/process/: adr-governance.md  development-workflow.md
docs/technical/: coding-standards.md
include/yashima/v1/core/: application.h
src/: main.cpp
src/v1/: CMakeLists.txt
src/v1/core/: application.cpp
src/v1/core/window/: window.cpp  window.h
src/v1/examples/: CMakeLists.txt
src/v1/examples/basic_window/: main.cpp
tests/v1/: CMakeLists.txt
tests/v1/core/window/: CMakeLists.txt  window_test.cpp
tests/v1/integration/window_lifecycle/: CMakeLists.txt  window_lifecycle_test.cpp
